# automau5

./: Cargo.toml  LICENSE.txt  Makefile
.github/workflows/: rust.yml
src/: main.rs
