[package]
name = "automau5"
version = "0.1.0"
edition = "2021"
author = "Tom R. <ltratcliff@gmail.com>"
description = "Move and Click with ease"
license = "MIT"

[[bin]]
name = "am"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
enigo = "0.0.14"
log = "0.4.17"
rand = "0.8.5"
simplelog = "0.12.0"
