[package]
name = "automau5"
version = "0.1.0"
edition = "2021"
description = "Move and Click with ease"
license = "MIT"

[[bin]]
name = "am"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
enigo = "0.2.1"
log = "0.4.22"
rand = "0.9.0-alpha.2"
simplelog = "0.12.2"
