[package]
name = "automau5"
version = "0.1.0"
edition = "2021"
description = "Move and Click with ease"
license = "MIT"

[[bin]]
name = "am"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
enigo = "0.3.0"
log = "0.4.25"
rand = "0.9.0-beta.3"
simplelog = "0.12.2"
